Only show categories for current year for purchase form

--- a/templates/budgets/monthly_budget_detail.html
+++ b/templates/budgets/monthly_budget_detail.html
@@ -23,7 +23,7 @@
     
 {% block body %}
     <div class="page-header-action">
-        <button class="button-create" hx-get='{% url "purchase_create" %}?next={{request.path|urlencode}}' hx-target="#modal-content"> + Add Purchase</button>
+        <button class="button-create" hx-get='{% url "purchase_create" %}?date={{monthly_budget.date|date:"Y-m-d"}}&next={{request.path|urlencode}}' hx-target="#modal-content"> + Add Purchase</button>
         <button class="button-create" hx-get='{% url "income_create"%}?next={{request.path|urlencode}}' hx-target="#modal-content"> + Add Income</button>
         <button class="button-create" hx-get='{% url "budgetitem_create_htmx" year=monthly_budget.date.year %}?next={{request.path|urlencode}}' hx-target="#modal-content"> + Add Budget Item</button>
     </div>
